#6152 Fixed scrollbar size

--- a/src/webroot/cms/content-manager/linkmanager/linkmanager.css.less
+++ b/src/webroot/cms/content-manager/linkmanager/linkmanager.css.less
@@ -122,7 +122,7 @@
  * Scrollbars
  */
 #linkToPage > .su-slideshow {
-	.su-scrollable .su-scrollable-scrollbar {
+	.su-scrollable .su-scrollable-scrollbar-background {
 		top: 0;
 		bottom: 0;
 	}
